[GTK] mouse wheel events are not considered to be mouse events https://bugs.webkit.org/show_bug.cgi?id=120648

Reviewed by Gustavo Noronha Silva.

Expose WheelEvent in the GObject DOM bindings API.

* bindings/gobject/GNUmakefile.am: Add new files to compilation.
* bindings/gobject/WebKitDOMPrivate.cpp:
(WebKit::wrap): Create a WebKitDOMWheelEvent when the given Event
is a WheelEvent.

Canonical link: https://commits.webkit.org/140632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157163 268f45cc-cd09-0410-ab3c-d52691b4dbfc